[package]
name = "egui-scale"
version = "0.1.1"
edition = "2021"
description = "Egui scaling library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-scale"
homepage = "https://github.com/zakarumych/egui-scale"
repository = "https://github.com/zakarumych/egui-scale"
keywords = ["egui", "gui", "imgui", "scale"]
categories = ["gui"]

[dependencies]
egui = "0.32"
